--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,18 @@
 version: '3.5'
 
+networks:
+    servicesnet:
+      name: ${NETWORK_NAME}
+      driver: ${NETWORK_DRIVER}
+
 services:
    apache:
       build:
          context: ./
          dockerfile: Dockerfile
+      container_name: ${APACHE_CONTAINER_NAME}
+      ports:
+         - "${APACHE_HOST_WEB_PORT}:80"
+         - "${APACHE_HOST_SSL_PORT}:443"
+      networks:
+         - servicesnet
